objects/SFDC_Objective__c.object
<CustomObject>
    <description>Tangible and measurable steps to achieve the plans high level purpose. Each objective has a type, a start and end date, and metrics to quantity targets and achieved results.</description>
    <fields>
        <fullName>Channel_Account_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Account Plan</label>
        <referenceTo>SFDC_Channel_Account_Plan__c</referenceTo>
        <relationshipLabel>Objectives</relationshipLabel>
        <relationshipName>R00N1500000Bwwd5EAB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Days_Left_Over__c</fullName>
        <formula>IF (ISPICKVAL (Status__c, &quot;Accomplished Objective&quot;),0,     IF (ISPICKVAL (Status__c, &quot;Exceeded Expectations&quot;),0,End_Date__c-TODAY()))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Left/ (Over)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Goal_Attained__c</fullName>
        <formula>if(NULLVALUE(Metric_Result__c,0) &lt;&gt; 0,   if(NULLVALUE(Metric_Goal__c, 0) &lt;&gt; 0, Metric_Result__c / Metric_Goal__c, null), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Goal Attained</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Metric_Goal__c</fullName>
        <label>Metric Goal</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metric_Result__c</fullName>
        <label>Metric Result</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Objective_Type__c</fullName>
        <label>Objective Type</label>
        <picklist>
            <picklistValues>
                <fullName>Expand Market Coverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generate New Opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improve Customer Satisfaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improve Service Levels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increase Certifications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increase Customer Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increase Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increase Partner Revenue</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urgent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <formula>if ( Days_Left_Over__c &lt; 0, &quot;Overdue&quot;, if( Days_Left_Over__c &gt; 0, &quot;In Progress&quot;, &quot;Complete&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half-way</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Three Quarters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accomplished Objective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exceeded Expectations</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Success_Measure__c</fullName>
        <label>Success Measure</label>
        <picklist>
            <picklistValues>
                <fullName>Revenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand Recognition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Knowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trained Employees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Satisfaction</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Objective</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Channel_Account_Plan__c</columns>
        <columns>Stage__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ObjectivesDueNext30Days</fullName>
        <columns>NAME</columns>
        <columns>Channel_Account_Plan__c</columns>
        <columns>End_Date__c</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>End_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:30</value>
        </filters>
        <label>Objectives Due - Next 30 Days</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ObjectivesOverdue</fullName>
        <columns>NAME</columns>
        <columns>Channel_Account_Plan__c</columns>
        <columns>Stage__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Overdue</value>
        </filters>
        <label>Objectives - Overdue</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Objective Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Objectives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>